--- a/canfood.html
+++ b/canfood.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dog Wet Food - 12packs 130g (Beef)</title>
+    <title>Adult Beef Wet Dog Food 400g (3 cans)</title>
     <link rel="icon" type="image/jpg" href="image/icon.png">
     <link rel="stylesheet" href="Beef.css">
 </head>
@@ -33,8 +33,8 @@
             </div>
             <div class="product-info">
                 <h1>Pedigree</h1>
-                <p>Dog Wet Food - 12packs 130g (Beef)</p>
-                <p class="price">$588</p>
+                <p>Adult Beef Wet Dog Food 400g (3 cans)</p>
+                <p class="price">₱387</p>
                 <ul>
                     <li>Pedigree Pouch Adult Beef</li>
                     <li>Beef Chunks Flavor in Gravy</li>
