--- a/Beef.html
+++ b/Beef.html
@@ -34,7 +34,7 @@
             <div class="product-info">
                 <h1>Pedigree</h1>
                 <p>Dog Wet Food - 12packs 130g (Beef)</p>
-                <p class="price">$588</p>
+                <p class="price">₱588</p>
                 <ul>
                     <li>Pedigree Pouch Adult Beef</li>
                     <li>Beef Chunks Flavor in Gravy</li>
