--- a/marthart.html
+++ b/marthart.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Puppy Milk Dry Dog Food 1.4kg</title>
+    <title>Adult Chicken and Tuna Dry Cat Food 7kg</title>
     <link rel="icon" type="image/jpg" href="image/icon.png">
     <link rel="stylesheet" href="Beef.css">
 </head>
@@ -34,7 +34,7 @@
             <div class="product-info">
                 <h1>SmartHeart</h1>
                 <p>Adult Chicken and Tuna Dry Cat Food 7kg</p>
-                <p class="price">₱229</p>
+                <p class="price">₱1,149</p>
                 <ul>
                     <li>SmartHeart Dry Food</li>
                     <li>Chicken and Tuna Flavor</li>
