--- a/grrr.html
+++ b/grrr.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Puppy Milk Dry Dog Food 1.4kg</title>
+    <title>Pedigree Adult Grilled Liver Loaf with Vegetables Wet Dog Food 130g (12 pouches)</title>
     <link rel="icon" type="image/jpg" href="image/icon.png">
     <link rel="stylesheet" href="Beef.css">
 </head>
@@ -34,7 +34,7 @@
             <div class="product-info">
                 <h1>Pedigree</h1>
                 <p>Pedigree Adult Grilled Liver Loaf with Vegetables Wet Dog Food 130g (12 pouches)</p>
-                <p class="price">₱589</p>
+                <p class="price">₱549</p>
                 <ul>
                     <li>Pedigree Pouch Adult Grilled Liver Loaf and Vegetables</li>
                     <li>Grilled Liver Loaf Flavor with Vegetables</li>
