--- a/mwe.html
+++ b/mwe.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Puppy Milk Dry Dog Food 1.4kg</title>
+    <title>Mother and Baby Milk Dry Dog Food 400g</title>
     <link rel="icon" type="image/jpg" href="image/icon.png">
     <link rel="stylesheet" href="Beef.css">
 </head>
@@ -33,8 +33,8 @@
             </div>
             <div class="product-info">
                 <h1>Pedigree</h1>
-                <p>Pedigree Adult Grilled Liver Loaf with Vegetables Wet Dog Food 130g (12 pouches)</p>
-                <p class="price">₱229</p>
+                <p>Mother and Baby Milk Dry Dog Food 400g</p>
+                <p class="price">₱119.75</p>
                 <ul>
                     <li>Pedigree Mother and Baby Dry Dog Food</li>
                     <li>Milk Flavor</li>
